--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #spring.profiles.active=dev
 spring.profiles.active=prod
 security.basic.enabled=true
-# For security issue using JWT: Json Web Token generator
-jwt.secret=Bearer_Secret_Code_For_Secured_Token
+# For security issue using JWT: Json Web Token generator (Necessary to decode secret key)
+# Penser à choisir une clé très longue, sinon, Erreur
+jwt.secret.key=SetPublicKeyHereJedoispenseraretirercettecle
 
 server.servlet.context-path=/springboot-restserver
 #server.port = 8080
