--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#local git console to push sources: password=admin/admin
 #spring.profiles.active=dev
 spring.profiles.active=prod
 security.basic.enabled=true
